tests/NormalTests/paczka1/fuzzy1/41197852.err
Error in line 2: A547 A547 59,4
Error in line 11: G8f S74 46,60
Error in line 12: A547 A850 87,5
Error in line 14: A547 S223 23,4
Error in line 21: A547 S74 76,6
Error in line 10: G8f A547 57,2
Error in line 26: G8f S74 168,4
Error in line 31: CBKoSN4gkVX S74 9&,2
Error in line 35: Mb9oEnRXJ A547 12,9
Error in line 13: KBTQ3lCznx S74 58,8
